# ComfyUI-clip-interrogator

./: .gitignore  LICENSE  README.md  README_zh.md  __init__.py  inference.py  install.py  model_list.json  node.py  node_mappings.py  nodes.py  pyproject.toml
module/: __init__.py  inference.py
